fixed spacing on all pages

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -187,7 +187,6 @@
 
  .footer .item:after {
   width: 75%;
-  bottom: 12px;
   left: 10px;
  }
 
