--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -132,6 +132,7 @@
 @media all and (min-width: 960px) {
     .comic {
         width: 60%;
+        margin-bottom: 65px;
    }
 
     .comic p {
