--- a/src/pages/Home/FactSlider/FactSlider.css
+++ b/src/pages/Home/FactSlider/FactSlider.css
@@ -163,6 +163,12 @@ article.nextSlide {
   }
 }
 
+@media screen and (min-width: 960px) {
+  .facts {
+    margin-bottom: 65px;
+  }
+}
+
 
 @media screen and (min-width: 992px) {
   .facts {
