--- a/src/pages/Newsfeed/Newsfeed.css
+++ b/src/pages/Newsfeed/Newsfeed.css
@@ -102,6 +102,10 @@
   .feed-container {
     padding: 20px;
   }
+
+  .newsfeed {
+    margin-bottom: 65px;
+  }
 }
 
 /* Wider screens */
